2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextTemplating.Tests.csproj: Flush.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* DummyHost.cs: Fix windows build.

2009-08-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Use assembly refs for
	  nunit.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Include the ASP.NET MVC
	  and TextTemplating addins in the main solution and build.

2009-04-13  Michael Hutchinson  <mhutchinson@novell.com>

	* GenerationTests.cs: Add tests for Windows/Mac newlines.

2009-04-03  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Updated.

	* GenerationTests.cs: Add test for C# output.

	* ParsingTests.cs: Track dummy host name change.

	* DummyHost.cs: Add more functionality to dummy host.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Move output dir from
	  ../bin to ../build.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Fix output directory.

2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Updated.

	* ParsingTests.cs: Add parser test.

	* DummyHost.cs: Dummy templating host.

2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests.csproj: Add tests.

	* ParsingTests.cs: Tokeniser state/value/location test.
