@@ -26,6 +26,7 @@
 
 using System;
 using System.Collections.Generic;
+using System.IO;
 using NUnit.Framework;
 using Microsoft.VisualStudio.TextTemplating;
 
@@ -68,7 +69,7 @@ namespace Mono.TextTemplating.Tests
 			string className = "GeneratedTextTransformation4f504ca0";
 			string code = GenerateCode (host, input, className, newline);
 			Assert.AreEqual (0, host.Errors.Count);
-			Assert.AreEqual (expectedOutput, code);
+			Assert.AreEqual (expectedOutput, StripHeader (code, newline));
 		}
 		
 		#region Helpers
@@ -102,22 +103,30 @@ namespace Mono.TextTemplating.Tests
 				return writer.ToString ();
 			}
 		}
+
+		static string StripHeader (string input, string newLine)
+		{
+			using (var writer = new StringWriter ()) {
+				using (var reader = new StringReader (input)) {
+					for (int i = 0; i < 9; i++) {
+						reader.ReadLine ();
+					}
+					string line;
+					while ((line = reader.ReadLine ()) != null) {
+						writer.Write (line);
+						writer.Write (newLine);
+					}
+				}
+				return writer.ToString ();
+			}
+		}
 		
 		#endregion
 		
 		#region Expected output strings
 		
 		public static string OutputSample1 = 
-@"// ------------------------------------------------------------------------------
-//  <autogenerated>
-//      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
-// 
-//      Changes to this file may cause incorrect behavior and will be lost if 
-//      the code is regenerated.
-//  </autogenerated>
-// ------------------------------------------------------------------------------
-
+@"
 namespace Microsoft.VisualStudio.TextTemplating {
     
     
