@@ -1,3 +1,9 @@
+2009-11-27  Olivier Dagenais  <olivier.dagenais@gmail.com>
+
+	* GenerationTests.cs: Make tests independent of the runtime
+	  they are running under by stripping the "autogenerated"
+	  comment (i.e. the first 9 lines).
+
 2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.TextTemplating.Tests.csproj: Flush.
